--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,9 @@
 @font-face {
-  font-family: 'Raleway-Regular';
-  src: url('./assets/font/Raleway-Regular.woff2');
-}
-@font-face {
-  font-family: 'Raleway-Bold';
-  src: url('./assets/font/Raleway-Bold.woff2');
+  font-family: 'Poppins';
+  src: url('./assets/font/Poppins-Regular.woff2');
 }
 
 body{
-  font-family: 'Raleway-Regular';
+  font-family: 'Poppins';
+  padding: 20px 80px;
 }
